second template added

--- a/InfoProject/InfoProject/Template/home.html
+++ b/InfoProject/InfoProject/Template/home.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link href="C:\Users\Mello\OneDrive\Documentos\InfoProject\InfoProject\InfoProject\Template\css\home.css"> 
+    <link  rel="stylesheet" href="css/style.css"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <title>Home</title>
 </head>
 <body>
-    <div class="container-fluid" style="padding: 0%;">
+    <div class="container-fluid p-0">
         <div class="d-flex justify-content-end" style="background-color: #FF5733;">
             <nav class="navbar navbar-expand-lg navbar-light" id="bar" style="background-color: #FF5733;">
                 <div class="container-fluid">
@@ -21,7 +21,7 @@
                       <a class="navbar-brand" href="#">Hidden brand</a>
                       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#">Home</a>
+                          <a class="nav-link active" aria-current="page" href="Menu.html">Menu</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Contacto</a>
@@ -31,7 +31,7 @@
                         </li>
                       </ul>
                       <form class="d-flex">
-                        <button class="btn btn-outline-light" name="search" type="submit"><i class="bi bi-person-fill"></i></button>
+                        <button class="btn1" name="search" type="submit"><i class="bi bi-person-fill"></i></button>
                       </form>
                 </div>  
             </nav>
